# MKK_LUNA_TEST_TASK

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  env_example  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
src/: main.py
src/core/: config.py  database.py  db_exceptions.py  logger.py  pagination.py  scheduler.py  security.py  templates.py
src/exceptions/: __init__.py  base.py
src/integrations/: __init__.py  sentry.py
src/models/: __init__.py  activity.py  base.py  building.py  organization.py  organization_phone.py  template_entity.py
src/repositories/: __init__.py  activity_repository.py  base.py  building_repository.py  organization_phone_repository.py  organization_repository.py  template_entity_repository.py
src/routers/: __init__.py  admin.py  directory.py  system.py  template.py
src/schemas/: __init__.py  activity.py  organization.py  organization_phone.py  template_entity.py
src/scripts/: seed_data.py
src/services/: __init__.py  activity_service.py  building_service.py  organization_phone_service.py  organization_service.py  template_entity_service.py
src/templates/: index.html
src/utils/: geo.py
tests/: test_config.py
tests/integration_tests/: conftest.py  test_activity_repository.py  test_admin_ui.py  test_building_repository.py  test_directory_api_contract.py  test_directory_models.py  test_organization_phone_repository.py  test_organization_repository.py  test_system_api.py  test_template_api_contract.py  test_template_entity_repository.py
(+20 files in other folders)
