[project]
name = "project"
version = "0.1.0"
description = "Some service"
requires-python = ">=3.14,<3.15"
authors = [{name = "alleftinna"}]
dependencies = [
    "fastapi>=0.135.1,<0.136.0",
    "uvicorn>=0.42.0,<0.43.0",
    "pydantic>=2.12.5,<3.0.0",
    "httpx>=0.28.1,<0.29.0",
    "jinja2>=3.1.6,<4.0.0",
    "aiofiles>=25.1.0,<26.0.0",
    "python-multipart>=0.0.22,<0.0.23",
    "bcrypt>=5.0.0,<6.0.0",
    "pydantic-settings>=2.13.1,<3.0.0",
    "apscheduler>=3.11.2,<4.0.0",
    "boto3>=1.42.71,<2.0.0",
    "alembic>=1.18.4,<2.0.0",
    "psycopg[binary]>=3.3.3,<4.0.0",
    "sqlalchemy>=2.0.48,<3.0.0",
    "elasticsearch>=9.3.0,<10.0.0",
    "sentry-sdk>=2.55.0,<3.0.0",
    "email-validator>=2.3.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "ruff>=0.15.7,<0.16.0",
    "mypy>=1.19.1,<2.0.0",
    "pre-commit>=4.5.1,<5.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
files = ["src", "tests"]
ignore_missing_imports = true
warn_unused_ignores = true

